; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu_subr.c_bhnd_pmu_set_switcher_voltage.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bhnd/cores/pmu/extr_bhnd_pmu_subr.c_bhnd_pmu_set_switcher_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bhnd_pmu_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bhnd_pmu_set_switcher_voltage(%struct.bhnd_pmu_softc* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.bhnd_pmu_softc*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.bhnd_pmu_softc* %0, %struct.bhnd_pmu_softc** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = and i32 %8, 31
  %10 = shl i32 %9, 22
  %11 = call i32 @BHND_PMU_REGCTRL_WRITE(%struct.bhnd_pmu_softc* %7, i32 1, i32 %10, i32 -1)
  %12 = load %struct.bhnd_pmu_softc*, %struct.bhnd_pmu_softc** %4, align 8
  %13 = load i32, i32* %6, align 4
  %14 = and i32 %13, 31
  %15 = shl i32 %14, 14
  %16 = call i32 @BHND_PMU_REGCTRL_WRITE(%struct.bhnd_pmu_softc* %12, i32 0, i32 %15, i32 -1)
  ret void
}

declare dso_local i32 @BHND_PMU_REGCTRL_WRITE(%struct.bhnd_pmu_softc*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
